--- a/HWAngularRedux/package.json
+++ b/HWAngularRedux/package.json
@@ -26,6 +26,9 @@
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
     "core-js": "^2.5.4",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^0.2.3",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
